# wg-agent

./: .gitignore  .gitmodules  Makefile  README.md
scripts/: cleanup.py  clear_env.sh  compile.sh  create_multi_users.sh  create_namespace1.sh  create_namespace2.sh  create_user.sh  create_user_error.sh  delete_namespace.sh  delete_user.sh  generate_api.sh  start.sh
scripts/mini_env/: SETUP.md  mini_env.sh  one_user.sh  test_setup.docx
vagrant/: README.md  Vagrantfile  setup.sh  setup_connections.sh  show.sh  update.sh
wg-mgr-rs/: Cargo.toml  README.md
wg-mgr-rs/.cargo/: config.toml
wg-mgr-rs/config/: mgr.yaml
wg-mgr-rs/src/: lib.rs  wg_api_handler.rs  wg_api_server.rs  wg_conf_server.rs  wg_conf_store_srv.rs  wg_network_conf_srv.rs
wg-mgr-rs/src/examples/: iptables.rs
wg-mgr-rs/tests/: integration_tests.rs  network_integration_tests.rs  simple_tests.rs
wg-mgr-rs/tests/common/: mod.rs
wg-rs/: Cargo.toml
wg-rs/examples/wg_collect/: main.rs
wg-rs/examples/wg_rust/: main.rs
wg-rs/src/: lib.rs
wg-sys/: Cargo.toml  build.rs  wrapper.h
wg-sys/src/: lib.rs
wg-sys/wireguard-tools/: .gitignore
wg-sys/wireguard-tools/src/: Makefile  containers.h  ipc-linux.h  ipc.c  ipc.h
wg-vxlan-setup/src/: check_wg.py  check_wg_test.py  ip_rules_setup.py  ip_rules_setup_test.py  iptables_setup.py  iptables_setup_test.py  main.py  routing_setup.py  routing_setup_test.py  vxlan_setup.py  vxlan_setup_test.py
